--- a/.github/workflows/publish-patch.yml
+++ b/.github/workflows/publish-patch.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Publish
         run: bun pub:patch
+        with:
+          ghToken: "${{ secrets.GITHUB_TOKEN }}"
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         
