--- a/.github/workflows/publish-patch.yml
+++ b/.github/workflows/publish-patch.yml
@@ -26,7 +26,10 @@ jobs:
         run: bun compile
 
       - name: Publish
-        run: bun pub:patch
+        run: |
+          git config --global user.name "James A. Prempeh"
+          git config --global user.email agyemanjp@danfortsystems.com
+          bun pub:patch
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         
