--- a/.github/workflows/publish-patch.yml
+++ b/.github/workflows/publish-patch.yml
@@ -31,6 +31,7 @@ jobs:
           git config --global user.email agyemanjp@danfortsystems.com
           bun pub:patch
         env:
+          GITHUB_TOKEN: ${{ github.token }}
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         
 
