--- a/package.json
+++ b/package.json
@@ -32,17 +32,16 @@
 		"object",
 		"text"
 	],
-	"contributors": [
-		{
-			"name": "James Prempeh",
-			"email": "agyemanjp@danfortsystems.com"
-		}
-	],
+	"author": {
+		"name": "James Prempeh",
+		"email": "agyemanjp@danfortsystems.com"
+	},
 	"license": "MIT",
 	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
 		"@types/bun": "1.1.6",
 		"@types/source-map-support": "0.5.1",
-		"npm-run-all": "^4.1.5",
+		"npm-run-all": "4.1.5",
 		"source-map-support": "0.5.19",
 		"typescript": "5.5.4"
 	},
